# KeyFlint

./: README.md
Flint/: AddressDisplay.ino  Flint.ino  FlintUI.ino  KeyManager.cpp  KeyManager.h  PSBTProcessing.ino  PrivateKeyDisplay.ino  PublicKeyDisplay.ino  SeedGeneration.ino  Trie.c  Trie.h  currentPSBT.cpp  currentPSBT.h  exportPSBT.ino  passphraseHandler.ino  random.c  random.h  userConfig.cpp  userConfig.h  userConfig.ino
libraries/: lv_conf.h  ui.h
libraries/UR/src/: bc-ur.hpp  bytewords.cpp  bytewords.hpp  cbor-lite.hpp  crc32.c  crc32.h  fountain-decoder.cpp  fountain-decoder.hpp  fountain-encoder.cpp  fountain-encoder.hpp  fountain-utils.cpp  fountain-utils.hpp  main.ino  random-sampler.cpp  random-sampler.hpp  test-utils.cpp  test-utils.hpp  ur-decoder.cpp  ur-encoder.cpp  ur.cpp  utils.cpp  utils.hpp  xoshiro256.cpp  xoshiro256.hpp
libraries/lvgl/src/widgets/keyboard/: lv_keyboard_binary.h  (+2 more)
libraries/ui/: ui.h
libraries/ui/src/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h
libraries/ui/src/images/: ui_img_1404577655.c  ui_img_1882376574.c  ui_img_black_arrow_resized_25x20_png.c  ui_img_pure_black_arrow25_png.c  ui_img_white_background_resized_25x20_png.c
libraries/ui/src/screens/: ui_Screen1.c  ui_Screen10.c  ui_Screen11.c  ui_Screen1110.c  ui_Screen1112.c  ui_Screen1113.c  ui_Screen112.c  ui_Screen115.c  ui_Screen116.c  ui_Screen117.c  ui_Screen118.c  ui_Screen119.c  ui_Screen12.c  ui_Screen13.c  ui_Screen14.c  ui_Screen2.c  ui_Screen3.c  ui_Screen4.c  ui_Screen5.c  ui_Screen6.c  ui_Screen7.c  ui_Screen8.c  ui_Screen9.c
(+3 files in other folders)
